--- a/css_hong/NikeMen.css
+++ b/css_hong/NikeMen.css
@@ -85,9 +85,12 @@ aside.side li a:hover{color: grey;}
 
 
 footer{
-    padding: 20px;
-    text-align: center;
-    background-color: #dddddd;
+    padding: 20px;    
+    background-color: black;
+    color: white;
+}
+footer div.footer_div1{
+    font-size: 13px;    
 }
 
 /* 반응형 웹 - 미디어쿼리 문법 */
