--- a/css_yang/kid.css
+++ b/css_yang/kid.css
@@ -1,8 +1,62 @@
+
 *{
     margin: 0px;
     padding: 0px;
     border: orangered dotted 1px;
+    font-family: 'Noto Sans KR', sans-serif;
+    text-decoration: none;
+}
+header{
+    display: flex;
+    justify-content: space-between;
+    padding: 8px 12px;
+}
+header img{
+    width: 100px;
+}
+
+header .header_list{
+    display: flex;
+    align-items: center;
+    list-style: none;
+    padding-left: 0px;
+}
+
+
+header .header_list li{
+    padding: 8px 12px;
+}
+
+
+header .header_icon{
+    list-style: none;
+    display: flex;
+}
+header .header_icon li{
+    padding: 8px 12px;
     
+}
+#burger{
+    display: none;
+}
+
+nav{
+    border: blue dotted 1px;
+    display: flex;
+
+    /* justify-content: space-between; */
+}
+
+nav .title{
+    width: 10%;
+    font-size: 26px;
+}
+nav .nav_menu{
+    text-align: center;
+    width: 90%;
+}
+nav .nav_menu a{
+    padding: 0px 26px
 }
 
 section{
@@ -10,11 +64,33 @@ section{
     flex-direction: column;
     align-items: center;
 }
-nav{
-    border: blue dotted 1px;
+@media screen and (max-width: 768px){
+    header .header_list{
+        display: none;
+    }
+    #burger{
+        display: inline;
+    }
+    header .header_list.active{
+        display: flex;
+    }
+    /* /////////// */
+    nav{
+        flex-direction: column;
+    }
+    nav .title{
+        width: 100%;
+        text-align: start;
+    }
+    nav .nav_menu{
+        width: 100%;
+        text-align: start;
+    }
+    nav .nav_menu a{
+        padding: 0px 14px
+    }
 }
-
-
+/* 
 .nav_menu{
     height: 50px;
     display: flex;
@@ -25,7 +101,6 @@ nav{
     color: #111111;
     padding: 0px 26px;
     font-size: 25px;
-    font-family: "Noto Sans KR", sans-serif;
     text-decoration: none;
 }
 .set{
@@ -55,4 +130,4 @@ img{
         flex-direction: column;
     }
     .
-}
+} */
