--- a/css_hong/NikeMen.css
+++ b/css_hong/NikeMen.css
@@ -24,11 +24,16 @@ body #notice #logo{
     padding: 16px 48px;    
 }
 
+.topMenu{
+   display: flex;
+   justify-content: flex-end;
+}
+
 
 header{    
     /* display: flex; */
     height: 100px;
-    padding: 0px 48px; 
+    padding: 0px 48px;
 }
 
 header a{
@@ -102,7 +107,7 @@ header .header-bottom-nav{
 
 /* 왼쪽사이드와 본문영역을 가진 부모요소 */
 .container{
-    display: flex;
+    display: flex;    
     /* 브라우저가 작아지면 양옆으로 놓을 공간이 없을때 */
     /* 자동으로 다음줄로 내려가도록...flex-wrap */
     flex-wrap: wrap;
