--- a/css/women.css
+++ b/css/women.css
@@ -2,13 +2,53 @@
 
 ul{list-style: none;}
 
-.topMenu{
-   display: flex;
-   justify-content: flex-end; 
+header{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 8px 12px;
 }
 
-.nikeIndiBraImg{
-    width: 90%;
+.topMenu{
+    display: inline-flex;
+    float: right;
+    margin-right: 20px;
+}
+
+header .line2{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+}
+
+#logo{
+    margin-left: 20px;
+}
+
+header .mainCategory li{
+    display: inline-flex;
+    padding: 8px 12px;
+}
+
+.heartBag{
+    display: inline-flex;
+    float: right;
+}
+
+header .line3{
+    display: inline-flex;
+    flex-direction: row;
+    margin-top: 20px;
+}
+
+#nikeWomen{
+    margin-left: 20px;
+}
+
+header .line3 li{
+    display: inline;
+    padding: 8px 12px;
+    float: center;
 }
 
 #text_nike_indi_bra{
@@ -35,6 +75,11 @@ ul{list-style: none;}
     margin-left: 20px;
 }
 
+.twoImages{
+    display: inline-flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
 #main4{
     display: inline;
     width: 48%;
@@ -115,6 +160,7 @@ ul{list-style: none;}
 
 #nikeAirMaxImg{
     width: 94%;
+    margin-top: 50px;
 }
 
 #newSpringImg{
@@ -125,7 +171,187 @@ ul{list-style: none;}
     width: 94%;
 }
 
+#btn_more_detail{
+    margin-top: 3px;
+}
+
 #NikeWomen{
     size: 40px;
     font-weight: bold;
 }
+
+
+/* ================================  article  ======================== */
+
+article .braTaiz{
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 50px;
+}
+
+article .braTaiz img{
+    width: 47%;
+}
+
+article .yoga{
+    display: inline-flex;
+    flex-direction: row;
+    margin-top: 35px;
+    justify-content: space-evenly;
+}
+
+article .yoga img{
+    width: 94%;
+}
+
+article .yogaDescription{
+    margin-top: -13px;
+}
+
+article .yogaDescription h4{
+    margin-top: 20px;
+}
+
+article .yogaDescription #yogaP{
+    margin-top: 13px;
+}
+article .yogaDescription p{
+    margin-top: -13px;
+}
+article .twoShoses img{
+    width: 47%;
+}
+
+article .twoShoses{
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 50px;
+}
+
+article #aaa{
+    width: 32%;
+}
+
+article #bbb{
+    width: 32%;
+}
+
+article #ccc{
+    width: 32%;
+}
+
+article .threePic{
+    margin-top: 50px;
+}
+
+
+/* ================================ footer ========================== */
+footer{
+    background-color: #000000;
+    color: #FFFFFF;
+    
+}
+
+footer .oneDescription{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-items:flex-start;
+    margin: 50px;
+}
+
+footer .footer1line{
+    display: inline-flex;
+    flex-direction: column;
+    margin-top: 50px;
+}
+
+footer .footer2line{
+    display: inline-flex;
+    flex-direction: column;
+    margin-top: 50px;
+}
+
+footer .footer2line li{
+    size: 8px;
+    color: #555555;
+}
+
+#customerCenter{
+    color: #FFFFFF;
+}
+
+
+footer .footer3line{
+    display: inline-flex;
+    flex-direction: column;
+    margin-top: 50px;
+}
+
+footer .footer4line{
+    display: inline-flex;
+    flex-direction: column;
+    margin-top: 50px;
+}
+
+#regardingNike{
+    size: 8px;
+    color: #555555;
+}
+
+footer .secondDescription{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.secondDescriptionUl{
+    display: inline-flex;
+    flex-direction: row;
+    padding: 8px 12px;
+    size: 8px;
+    margin-left: 10px;
+}
+
+#nikeCopyRight{
+    margin-left: 10px;
+    color: #555555;
+    size: 8px;
+}
+
+.secondDescriptionUl2{
+    display: inline-flex;
+    flex-direction:row;
+    padding: 8px 12px;
+    float: right;
+    color: #555555;
+}
+
+#personalDescription{
+    margin-left: 8px;
+}
+
+.thirdDescription{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-items: center;
+    align-items: flex-start;
+    color: #555555;
+    margin: 50px;
+}
+
+.thirdDescription li{
+    size: 3px;
+}
+
+footer #link{
+    color: #FFFFFF;
+}
+
+footer #online{
+    margin-top: 20px;
+}
+
