디자인 조금더추가

--- a/css_hong/NikeMen.css
+++ b/css_hong/NikeMen.css
@@ -29,6 +29,13 @@ body #notice #logo{
    justify-content: flex-end;
 }
 
+.heartBag{
+    display: inline-flexbox;
+    float: right;
+    width: 100px;
+    margin-top: 20px;
+}
+
 
 header{    
     /* display: flex; */
