--- a/css_hong/NikeMenMobile.css
+++ b/css_hong/NikeMenMobile.css
@@ -1,6 +1,34 @@
 @media (max-width:960px){
 
-    
+    .container{
+        flex-direction: column;
+    }
 
+    .topMenu{
+        display: none;
+    }
 
+    #main_menu{
+        display: none;
+    }
+
+    #icon_set input{
+        display: none;
+    }
+
+    .icon{
+        margin: 0 5px;
+    }
+
+    #footer01 li{
+        min-width: 100px;
+    }
+
+    #footer02 p{
+        min-width: 100px;
+    }
+
+    #footer03 p{
+        min-width: 300px;
+    }
 }
