--- a/css_yang/kid.css
+++ b/css_yang/kid.css
@@ -19,6 +19,7 @@ header{
     display: flex;
     justify-content: space-between;
     padding: 8px;
+    flex-direction: row;
 }
 header img{
     width: 100px;
@@ -29,11 +30,14 @@ header .header_list{
     align-items: center;
     list-style: none;
     padding-left: 0px;
+    flex-direction: row;
 }
 
 
 header .header_list li{
     padding: 8px 12px;
+    display: inline;
+    margin: 0px;
 }
 
 
@@ -44,24 +48,26 @@ header .header_icon{
 header .header_icon li{
     padding: 8px;
 }
-/* header .header_icon li i{
-    padding: 8px;
-} */
+.header_icon i{
+    font-size: 30px;
+}
 
-#burger{
+#check{
     display: none;
 }
-/* /////nav///////////////// */
-section{
-    /* padding-top:75px */
+.checkbtn{
+    display: none;
 }
+
+.hidden2_box, .hidden3_icon_box{
+    display: none;
+}
+
+
 nav{
     border: blue dotted 1px;
     display: flex;
-
-    /* justify-content: space-between; */
     align-items: center;
-    /* position: fixed; */
 }
 
 nav .title{
@@ -84,7 +90,7 @@ a:visited{color: black}
 nav .nav_menu #nav_menu_1st{
     padding-left: 0px;
 }
-/* ///////section video//////////// */
+/* section 시작 */
 section{
     display: flex;
     flex-direction: column;
@@ -101,28 +107,29 @@ section figcaption{
     text-align: center;
 
 }
-figcaption h1, figcaption p{
-    
+
+.list_hidden{
+    display: none;
 }
-figcaption .buy{
-    background-color: black;
+.buy{
+    background-color: wheat;
     border-radius: 32px;
     padding: 8px 16px;
-    color: whitesmoke;
+    color: fuchsia;
     margin: 30px;
 }
-figcaption .buy:hover{
+.buy:hover{
     background-color: rgb(90, 90, 90);
 }
 
-/* ////section 에어맥스,브라///*/
+/* section 에어맥스,브라///*/
 section img{
     width: 100%;
 }
 section img:hover{
     opacity: 0.5;
 }
-/* ///section 신발두개 */
+/* section 신발두개 */
 section .shoe_both{
     display: flex;
     flex-direction: row;
@@ -158,7 +165,7 @@ section .shoe_both .shoe_right .caption_right{
     color: whitesmoke;
 }
 
-/* ////이번주 패밀리 룩 */
+/* 이번주 패밀리 룩 */
 section .swiper-wrapper{
     display: flex;
 }
@@ -178,26 +185,20 @@ section .swiper-wrapper figcaption{
         src: "https://nikevideo.nike.com/72451143001/202103/2596/72451143001_6241867310001_6241866134001.mp4";
     }
 
-    header .header_list{
-        display: none;
-    }
+    
     .header{
         padding-right: 0px;
     }
-    #burger{
-        display: inline;
-    }
-    header .header_list.active{
-        display: flex;
-    }
+
     /* /////////// */
+
+
     nav{
         margin-top: -3px;
         flex-direction: column;
         /* position: fixed; */
         width: 100%;
         background-color: white;
-        z-index: 999;
     }
     
     nav .title{
@@ -222,45 +223,92 @@ section .swiper-wrapper figcaption{
     .shoe_right img{
         background-image : url("./image_yang/m210310_kids_p3_bg2.jpg");
     }
-}
-/* 
-.nav_menu{
-    height: 50px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-.nav_menu a{
-    color: #111111;
-    padding: 0px 26px;
-    font-size: 25px;
-    text-decoration: none;
-}
-.set{
-    display: flex;
-    max-width: 80%;
-}
 
-video{
-    max-width: 100%;
-}
-img{
-    max-width: 100%;
-}
-.show_both{
-    display: flex;
-}
-
-
-.swiper-wrapper{
-    display: flex;
-    flex-direction: row;
-
-}
-
-@media screen and (max-width: 700px){
-    .show_both{
-        flex-direction: column;
+    
+    /* 햄버거 */
+    nav{
+        position: sticky;
+        top:-10px;
+        z-index: 1;
     }
-    .
-} */
+    .header_icon li{
+        margin-right: 20px;
+    }
+    .checkbtn{
+        display: block;
+        margin: 0px;
+        padding: 0px;
+
+        font-size: 30px;
+        float: right;
+        margin-right: 40px;
+        cursor: pointer; 
+        border:0px;
+
+        position: fixed;
+        top: 15px;
+        z-index: 100000;
+    }
+    .header_list{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: whitesmoke;
+        top: 0px;
+        left: 100%;
+        text-align: center;
+        transition: all .3s;
+        z-index: 9;
+        flex-direction: column;
+        
+    }
+    
+    .header_list ul li{
+        display: block;
+        margin: 0;
+        /* line-height: 30px; */
+        font-size: 24px;
+    }
+    #check:checked ~div section,
+    #check:checked ~div nav,
+    #check:checked ~div header img{
+        filter: blur(8px);
+    }
+    #check:checked ~ div header .header_list
+    {
+        left: 70%;
+        text-align: left;
+        padding-left: 30px;
+        display: inline-flex;
+        justify-content: space-around;
+        flex-direction: column;
+        align-items: flex-start;  
+        filter: blur(0px); 
+    }
+
+    
+
+    .hidden2_box, .hidden3_icon_box{
+        display: block;
+    }
+
+    
+    
+
+    .list_hidden{
+        display: block;
+        width: 30%;
+    }
+
+    .hidden2_box h4{
+        margin-bottom: 20px;
+
+        width: 60%;
+    }
+    
+    #hidden2{
+        display: inline;
+        margin: 0px;
+    }
+    
+    
